# ASTRA

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/: ASTRA_BRIEF.md  PHASE1_PLAN.md  RESULTS_TEMPLATE.md
scripts/: download_twitter2010.sh  setup_ubuntu.sh  sweep_bvgraph_sram.sh  sweep_sram.sh
src/: bvgraph_reader.rs  edge_reader.rs  main.rs  metrics.rs  model.rs  partition.rs  switch.rs  trace.rs
